Squashed commit of the following:
commit 414a55a598190117dbafaf3d1f7a4e82fab355ee
Author: ddavis-2015 <ddavis@bdti.com>
Date:   Thu Nov 21 18:15:40 2024 -0800

    last merge missed xtensa.inc file

commit 11105435233318153f3ef9b2b67dbd0c0da1518f
Author: ddavis-2015 <ddavis@bdti.com>
Date:   Thu Nov 21 18:06:45 2024 -0800

    Squashed commit of the following:

    commit 300751d6c1bb0b8794106109e4d805a2f1391b68
    Author: ddavis-2015 <ddavis@bdti.com>
    Date:   Wed Nov 20 12:03:16 2024 -0800

        Update to latest Cadence code.  Int8 any bitwidth on normal quant axis updated.

    commit 0a49b2aa12654b854c8bd07d8b4ebf0bb09eb575
    Author: ddavis-2015 <ddavis@bdti.com>
    Date:   Wed Nov 20 10:50:30 2024 -0800

        Add input tensor CRC to Generic Benchmark application.
        Only use -O3 -LNO:simd with the xtensa decompress.cc target.

    commit 83dafcef8df27521cb2494677c4d9351944bb27c
    Author: ddavis-2015 <ddavis@bdti.com>
    Date:   Mon Nov 18 17:23:58 2024 -0800

        cleanup

    commit 2f8ceada4f8c3445425168e3372f42373189f53e
    Author: ddavis-2015 <ddavis@bdti.com>
    Date:   Mon Nov 18 13:29:33 2024 -0800

        Revert FakeMicroContext changes for alternate profiler.
        Add default alternate profiler implementation to MicroContext.

    commit fddf003e6aee676a855d419bff69f6da1947762a
    Author: ddavis-2015 <ddavis@bdti.com>
    Date:   Mon Nov 18 12:29:26 2024 -0800

        Fix typo.

    commit ae6a20772ec0af5e4a00ff471f0c77d234a8a51c
    Author: ddavis-2015 <ddavis@bdti.com>
    Date:   Mon Nov 18 12:29:06 2024 -0800

        Implement alternate profiler for MicroInterpreter.
        Enable use of alternate profiler by decompression code.
        Enable use of alternate profiler by Generic Benchmark application.

    commit 5e1a1c992b9af68fefd459104fdb510ee73e52f6
    Author: ddavis-2015 <ddavis@bdti.com>
    Date:   Sun Nov 10 18:24:02 2024 -0800

        changes to make the memory planner debug output easier to interpret



--- a/tensorflow/lite/micro/BUILD
+++ b/tensorflow/lite/micro/BUILD
@@ -177,6 +177,7 @@ tflm_cc_library(
 tflm_cc_library(
     name = "micro_allocator",
     srcs = [
+        "compression.h",
         "micro_allocation_info.cc",
         "micro_allocator.cc",
     ],
