--- a/.bazelrc
+++ b/.bazelrc
@@ -80,3 +80,7 @@ build:ubsan --copt -O3
 build:ubsan --copt -fno-omit-frame-pointer
 build:ubsan --linkopt -fsanitize=undefined
 build:ubsan --linkopt -lubsan
+
+# Hooks for defining local configuration
+try-import ../bazelrc.local
+try-import bazelrc.local
