build: add -fno-asynchronous-unwind-tables to reduce binary size
Add -fno-asynchronous-unwind-tables to reduce binary size. Bloaty
showed the stack unwinding metadata to be taking up space even
when we don't use exceptions.

BUG=part of #2636

--- a/tensorflow/lite/micro/tools/make/Makefile
+++ b/tensorflow/lite/micro/tools/make/Makefile
@@ -167,6 +167,7 @@ endif
 COMMON_FLAGS := \
   -Werror \
   -fno-unwind-tables \
+  -fno-asynchronous-unwind-tables \
   -ffunction-sections \
   -fdata-sections \
   -fmessage-length=0 \
