feat(compression): add decompression library
Add a decompression library, defining structures for compressed
tensors and decompression logic to be used by kernels. Add a unit
test to validate decompression logic.

BUG=part of #2636

--- a/tensorflow/lite/micro/BUILD
+++ b/tensorflow/lite/micro/BUILD
@@ -28,6 +28,16 @@ tflm_cc_library(
 )
 
 tflm_cc_library(
+    name = "compression",
+    hdrs = [
+        "compression.h",
+    ],
+    deps = [
+        "//tensorflow/lite/c:common",
+    ],
+)
+
+tflm_cc_library(
     # TODO(b/187093492): Rename to micro_interpreter.
     name = "micro_framework",
     srcs = [
