Fix duplicate code + add int16 transpose support
Change-Id: Icf30c3391e6f745f244cca2c5417896c6d8a3e1c

--- a/tensorflow/lite/micro/kernels/BUILD
+++ b/tensorflow/lite/micro/kernels/BUILD
@@ -277,6 +277,7 @@ tflm_kernel_cc_library(
         "mul_common.cc",
         "neg.cc",
         "pack.cc",
+        "pad_common.cc",
         "pad.cc",
         "pooling.cc",
         "pooling_common.cc",
@@ -348,6 +349,7 @@ tflm_kernel_cc_library(
         "strided_slice.h",
         "sub.h",
         "svdf.h",
+        "transpose.h",
         "transpose_conv.h",
         "unidirectional_sequence_lstm.h",
     ] + select({
