Fix coding style and no_tf_lite_static_memory build

--- a/tensorflow/lite/micro/tools/make/Makefile
+++ b/tensorflow/lite/micro/tools/make/Makefile
@@ -258,6 +258,10 @@ else ifeq ($(BUILD_TYPE), no_tf_lite_static_memory)
 	# https://github.com/tensorflow/tensorflow/issues/43076
 	CXXFLAGS := $(filter-out -DTF_LITE_STATIC_MEMORY, $(CXXFLAGS))
 	CCFLAGS := $(filter-out -DTF_LITE_STATIC_MEMORY, $(CCFLAGS))
+
+  # array.h uses std::conditional_t, which is a C++14 feature
+  CXXFLAGS := $(filter-out -std=c++11, $(CXXFLAGS))
+  CXXFLAGS += -std=c++14
 endif
 
 # This library is the main target for this makefile. It will contain a minimal
