--- a/tensorflow/lite/micro/BUILD
+++ b/tensorflow/lite/micro/BUILD
@@ -406,6 +406,14 @@ tflm_cc_library(
 )
 
 tflm_cc_library(
+    name = "static_vector",
+    hdrs = ["static_vector.h"],
+    deps = [
+        "//tensorflow/lite/kernels:op_macros",
+    ],
+)
+
+tflm_cc_library(
     name = "system_setup",
     srcs = [
         "system_setup.cc",
@@ -426,6 +434,7 @@ tflm_cc_library(
     deps = [
         ":micro_log",
         ":span",
+        ":static_vector",
     ],
 )
 
@@ -636,6 +645,18 @@ tflm_cc_test(
         "//tensorflow/lite/micro/benchmarks:keyword_scrambled_model_data",
         "//tensorflow/lite/micro/testing:micro_test",
         "//tensorflow/lite/micro/testing:test_conv_model",
+    ],
+)
+
+tflm_cc_test(
+    name = "static_vector_test",
+    size = "small",
+    srcs = [
+        "static_vector_test.cc",
+    ],
+    deps = [
+        ":static_vector",
+        "//tensorflow/lite/micro/testing:micro_test",
     ],
 )
 
