--- a/tensorflow/lite/micro/kernels/BUILD
+++ b/tensorflow/lite/micro/kernels/BUILD
@@ -238,6 +238,7 @@ tflm_kernel_cc_library(
         "cumsum.cc",
         "decode.cc",
         "decode_state.cc",
+        "decode_state_huffman.cc",
         "decode_state_lut.cc",
         "decode_state_prune.cc",
         "depth_to_space.cc",
@@ -332,6 +333,7 @@ tflm_kernel_cc_library(
         "circular_buffer.h",
         "conv.h",
         "decode_state.h",
+        "decode_state_huffman.h",
         "decode_state_lut.h",
         "decode_state_prune.h",
         "depthwise_conv.h",
