refactor(compression): migrate compress.py from model_facade to model_editor
Replace model_facade with model_editor in compress.py and tests.
model_editor provides a cleaner API with better buffer and metadata
handling. Buffers appended during compression are automatically indexed,
and quantization parameters are accessed through a wrapper object.

Update BUILD dependencies accordingly.

--- a/tensorflow/lite/micro/compression/BUILD
+++ b/tensorflow/lite/micro/compression/BUILD
@@ -115,7 +115,7 @@ py_library(
     ],
     deps = [
         ":metadata_py",
-        ":model_facade",
+        ":model_editor",
         ":spec",
         "//tensorflow/lite/micro/tools:tflite_flatbuffer_align",
         requirement("absl_py"),
@@ -149,7 +149,7 @@ py_test(
     deps = [
         ":compress",
         ":metadata_py",
-        ":model_facade",
+        ":model_editor",
         ":spec",
         ":test_models",
         "//tensorflow/lite/python:schema_py",
