feat(compression): add Compressor protocol and CompressionResult
Define the plugin interface for compression methods. Each compressor
implements the Compressor protocol with a compress() method that
returns encoded data and ancillary data. CompressionError provides
a common exception type for compression failures.

--- a/tensorflow/lite/micro/compression/BUILD
+++ b/tensorflow/lite/micro/compression/BUILD
@@ -159,6 +159,16 @@ py_test(
 )
 
 py_library(
+    name = "compressor",
+    srcs = ["compressor.py"],
+    deps = [
+        ":decode",
+        ":model_editor",
+        ":spec",
+    ],
+)
+
+py_library(
     name = "decode",
     srcs = ["decode.py"],
 )
