feat(compression): add DecodeType class for type-safe decode operations
Add DecodeType class to replace raw integer decode_type field with
named constants and factory methods. Provides predefined constants for
built-in types (LUT, HUFFMAN, PRUNING) and a factory method for custom
types (128-255).

Custom types are automatically named with CUSTOM_{code} prefix for
clarity in debugging. The class supports serialization via __int__()
and comparison with both DecodeType objects and integers.

Update DecodeCommonMetadata to use DecodeType and update tests to use
named constants.

Add decode module BUILD targets.

--- a/tensorflow/lite/micro/compression/BUILD
+++ b/tensorflow/lite/micro/compression/BUILD
@@ -159,6 +159,21 @@ py_test(
 )
 
 py_library(
+    name = "decode",
+    srcs = ["decode.py"],
+)
+
+py_test(
+    name = "decode_test",
+    size = "small",
+    srcs = ["decode_test.py"],
+    deps = [
+        ":decode",
+        requirement("tensorflow"),
+    ],
+)
+
+py_library(
     name = "spec",
     srcs = ["spec.py"],
     deps = [
