--- a/.github/workflows/run_cortex_m.yml
+++ b/.github/workflows/run_cortex_m.yml
@@ -1,6 +1,6 @@
-name: Run-Hexagon
+name: Run-Cortex-M
 
-# This is the entry point for hexagon.yml for scheduled and workflow_dispatch events. 
+# This is the entry point for cortex_m.yml for scheduled and workflow_dispatch events. 
 
 on:
   schedule:
@@ -11,8 +11,8 @@ on:
   workflow_dispatch: {}
 
 jobs:
-  call-suite-hexagon:
-    uses: ./.github/workflows/suite_hexagon.yml
+  call-suite-cortex-m:
+    uses: ./.github/workflows/suite_cortex_m.yml
     if: |
       github.event_name == 'workflow_dispatch' ||
       (github.event_name == 'schedule' && github.repository == 'tensorflow/tflite-micro')
@@ -22,7 +22,7 @@ jobs:
       tflm-bot-token: ${{ secrets.TFLM_BOT_PACKAGE_READ_TOKEN }}
 
   issue-on-error:
-    needs: [call-suite-hexagon]
+    needs: [call-suite-cortex-m]
     if: ${{ always() && contains(needs.*.result, 'failure') }}
     uses: ./.github/workflows/issue_on_error.yml
     with:
