--- a/.github/workflows/suite_riscv.yml
+++ b/.github/workflows/suite_riscv.yml
@@ -11,9 +11,17 @@ on:
         required: true
 
 jobs:
-  call-riscv-postmerge:
-    uses: ./.github/workflows/riscv_postmerge.yml
-    with:
-      trigger-sha: ${{ inputs.trigger-sha }}
-    secrets:
-      tflm-bot-token: ${{ secrets.tflm-bot-token }}
+  riscv_tests:
+    runs-on: ubuntu-latest
+    name: RISC-V Tests
+    steps:
+    - uses: actions/setup-python@v6
+      with:
+        python-version: '3.10'
+    - uses: actions/checkout@v6
+      with:
+        ref: ${{ inputs.trigger-sha }}
+    - name: Test
+      uses: docker://ghcr.io/tflm-bot/tflm-ci:0.6.5
+      with:
+        args: /bin/sh -c tensorflow/lite/micro/tools/ci_build/test_riscv.sh
